# Wells

./: .env  .env.example  .gitignore  README.md  about.html  debug_api.py  install.ps1  install.sh  mcp.txt  output_sample.txt  plan.md  pyproject.toml  readme.html  token-optimization.txt  wells  wells.bat
.wells/: rules.yaml
skills/add-provider-profile/: SKILL.md
skills/worktree-agents/: SKILL.md
src/coding_harness/: AGENT.md  chat.py  cli.py  config.py  executor.py  gitops.py  graph.py  index_tools.py  logo.py  main.py  mcp_client.py  mcp_server.py  providers.py  rules.py  runtime.py  sessions.py  settings.py  setup.py  state.py  subagents.py  summarize.py  tokens.py  tools.py  tui.py
src/wells/: __init__.py  __main__.py  background.py  chat.py  cli.py  codeact.py  commands.py  config.py  context.py  control.py  embeddings.py  executor.py  finisher.py  fleet.py  gitops.py  graph.py  hooks.py  index_tools.py  index_watcher.py  logger.py  main.py  mcp_client.py  mcp_server.py  (+19 more)
tests/: test_background.py  test_background_worktrees.py  test_chat.py  test_codeact.py  test_commands.py  test_embeddings.py  test_executor.py  test_fleet.py  test_headless.py  test_hooks.py  test_layer3.py  test_logger.py  test_mcp_server.py  test_orchestrator.py  test_platform.py  test_principles.py  test_providers_and_settings.py  test_quality.py  test_recovery_hints.py  test_rules.py  test_skills.py  test_stepwise.py  test_stop_banner.py  test_tools.py  test_traces.py  test_tui.py  test_vision.py  test_vision_cli.py  test_web.py
wells-index/: Cargo.toml  README.md  pyproject.toml
(+20 files in other folders)
