[project]
name = "coding-harness"
version = "0.1.0"
description = "A LangGraph-based agentic coding harness (planner/architect/coder/tester/reviewer) over the Z.ai OpenAI-compatible API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "mcp>=1.28.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[project.scripts]
coding-harness = "coding_harness.main:main"
coding-harness-mcp = "coding_harness.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coding_harness"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
